--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -13,6 +13,20 @@
     width: 760px
     margin: 0 auto
     position: relative
+  .story-title, .post-title
+    font-size: 20px
+    font-family: Philosopher, serif
+    color: white
+  .story-title
+    display: block
+    position: absolute
+    top: 0
+    right: 100%
+    text-decoration: none
+    height: 30px
+    line-height: 30px
+    &:hover
+      text-shadow: white 0 0 2px
   .prev-next
     float: left
     width: 80px
@@ -54,7 +68,7 @@
       left: 44px
       &.waiting
         display: none
-  .title
+  .post-title
     position: absolute
     top: 0
     left: 80px
@@ -133,24 +147,23 @@
   .slide-button.what-is-it
     position: absolute
     top: 0
-    right: 100%
-    margin-right: 20px
+    left: 100%
+    margin-left: 5px
     &.open .button, & .button:hover
       color: white
     .button
       font-size: 12px
       color: #d8d8d8
     .content
-      font-size: 15px
-      .arrow
-        left: 44px
-  .slide-button.share
-    .content
       left: auto
       right: 0
+      font-size: 15px
+      .arrow
+        right: 37px
+        left: auto
+  .slide-button.share
     .arrow
-      left: auto
-      right: 57px
+      left: 65px
 
 .transform3d .top-menu
   +perspective(2000px)
