--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -18,7 +18,7 @@ $top-menu: sprite-map("top-menu/*.png")
   .story-title, .post-title
     height: 30px
     line-height: 30px
-    font-size: 20px
+    font-size: 19px
     font-family: Philosopher, serif
     color: white
   .story-title
@@ -27,8 +27,14 @@ $top-menu: sprite-map("top-menu/*.png")
     top: 0
     right: 100%
     text-decoration: none
+    padding-left: 22px
     &:hover
       text-shadow: white 0 0 2px
+  .story-logo
+    position: absolute
+    left: 0
+    top: 7px
+    +sized-sprite($top-menu, logo)
   .prev-next
     float: left
     width: 80px
