--- a/app/views/posts/_top-menu.haml
+++ b/app/views/posts/_top-menu.haml
@@ -1,16 +1,29 @@
 %header.top-menu{ class_if('hidden', @hide_top_menu), role: 'top-menu-slider' }
   .top-menu-rotator( role="top-menu-rotator" )
     .center
-      %a.story-title( href="/" role="home" )= story['title']
+      %a.story-title( href="/" role="home" )
+        .story-logo
+        = story['title']
+
+      - prevPage = @post.try(:prev)
+      - nextPage = @post.try(:next)
+      - isFirst  = prevPage.nil? or prevPage.title?
+      .prev-next{ class_if('first', isFirst), class_if('last', !nextPage), :role => 'prev-next-page' }
+        %a.prev.to-page( title="Предыдущая запись" href="#{prevPage.try(:url)}" role="prev-page" ) ↑
+        %a.prev.to-title( title="Обложка" href="#{root_path}" ) ↑
+        %a.next.to-page( title="Следующая запись" href="#{nextPage.try(:url)}" role="next-page" ) ↓
+        .next.waiting( title="Продолжение следует" ) ↓
+
       .post-title
         .top-title( role="prev-title-top title-slider" )
         .current-title( role="current-title" )= @post.try(:title)
         .bottom-title( role="prev-title-bottom" )
+
       .subscribe-and-share
         .slide-button.subscribe
           %a.button( role="top-menu-open" href="#subscribe" )
             .icon
-            Подписаться
+            Подпишись
           .content
             .arrow
               .rotated
@@ -35,12 +48,3 @@
             прямо по ходу развития событий.
           %p
             Вы можете написать комментарий герою или автору.
-
-      - prevPage = @post.try(:prev)
-      - nextPage = @post.try(:next)
-      - isFirst  = prevPage.nil? or prevPage.title?
-      .prev-next{ class_if('first', isFirst), class_if('last', !nextPage), :role => 'prev-next-page' }
-        %a.prev.to-page( title="Предыдущая запись" href="#{prevPage.try(:url)}" role="prev-page" ) ↑
-        %a.prev.to-title( title="Обложка" href="#{root_path}" ) ↑
-        %a.next.to-page( title="Следующая запись" href="#{nextPage.try(:url)}" role="next-page" ) ↓
-        .next.waiting( title="Продолжение следует" ) ↓
