Improve non-JS notice style

--- a/app/assets/stylesheets/core/notices.css.sass
+++ b/app/assets/stylesheets/core/notices.css.sass
@@ -11,6 +11,8 @@
   +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
 
 .disabled-js
+  border-top: 2px solid black
+  line-height: 28px
   background: #af1109
   color: white
   text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 1px
