--- a/app/views/posts/title.html.haml
+++ b/app/views/posts/title.html.haml
@@ -6,8 +6,10 @@
   .book
     .book-wrap
       .bottom
-      - (1..12).to_a.reverse_each do |i|
+      - (2..12).to_a.reverse_each do |i|
         .page( class="page#{i} #{(i % 2).zero? ? 'even' : 'odd'}" )
+      .page.page1.odd
+        .text= @first.html
       .rotator
         .back-side
           .paper
