--- a/app/assets/stylesheets/core/common.css.sass
+++ b/app/assets/stylesheets/core/common.css.sass
@@ -7,13 +7,14 @@
 html, body
   height: 100%
 
-body
+body, input, textarea
   background: white
   color: black
+  font-size: 16px
   font-family: 'PT Sans', sans-serif
 
 a:active, a:focus
   outline: none
 
-input
+input, textarea
   outline: none
