--- a/app/assets/stylesheets/pages/post.css.sass
+++ b/app/assets/stylesheets/pages/post.css.sass
@@ -1,22 +1,24 @@
 @import 'base'
 
 .post-page
-  width: 100%
   min-height: 100%
   background: $gray-background
   padding: 40px 0 15px 0
   +box-sizing(border-box)
+  .post-center
+    width: 760px
+    margin: 0 auto
+
 body.all-posts .post-page
   min-height: 0
   &.last-post
     min-height: 100%
 
 .post-page .paper
-  width: 600px
-  margin: 10px auto
+  margin: 10px 0
   padding: 20px 80px
   background: white
-  +box-shadow(#ccc 0px 0px 2px 1px)
+  +shadow
   line-height: 1.3
   font-size: 16px
   position: relative
@@ -94,8 +96,7 @@ body.all-posts .post-page
     background: #666
 
 .post-page .next-post
-  width: 600px + 2 * 35px
-  margin: 30px auto 42px auto
+  margin: 30px 0 42px 0
   a
     display: inline-block
     background: black
