--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -44,9 +44,10 @@ $title-height: 1.4 * $title-width
   .page1
     +box-shadow(rgba(0, 0, 0, 0.1) 15px 0 15px -15px inset)
     .text
-      margin: 30px 40px
+      line-height: 1.3
+      margin: 30px 45px 55px 45px
       font-size: 15px
-      height: $title-height - 6px - 60px
+      height: $title-height - 6px - 85px
       overflow: hidden
       p
         padding: 5px 0
