--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -7,6 +7,11 @@ $top-menu: sprite-map("top-menu/*.png")
   right: 0
   z-index: 50
   height: 30px
+  a
+    text-shadow: black 0 0 2px
+    +transition(text-shadow, 150ms)
+    &:hover
+      text-shadow: white 0 0 2px
   .top-menu-rotator
     height: 30px
     background: black
@@ -28,8 +33,6 @@ $top-menu: sprite-map("top-menu/*.png")
     right: 100%
     text-decoration: none
     padding-left: 22px
-    &:hover
-      text-shadow: white 0 0 2px
   .story-logo
     position: absolute
     left: 0
@@ -61,13 +64,9 @@ $top-menu: sprite-map("top-menu/*.png")
       font-size: 20px
       text-decoration: none
       text-align: center
-      text-shadow: white 0 0 0
-      +transition(text-shadow, 200ms)
       &.waiting, &.waiting:hover
         color: #888
-        text-shadow: white 0 0 0
-      &:hover
-        text-shadow: white 0 0 2px
+        text-shadow: black 0 0 2px
     .prev
       left: 24px
       &.to-title
@@ -101,13 +100,10 @@ $top-menu: sprite-map("top-menu/*.png")
       line-height: 30px
       height: 29px
       padding: 0 6px 0 26px
-      text-shadow: white 0 0 0
       +box-shadow(white 0 0 13px -13px inset)
       border-bottom: 1px solid black
-      +transition(all, 200ms)
+      +transition(all, 150ms)
       position: relative
-      &:hover
-        text-shadow: white 0 0 2px
       .icon
         position: absolute
         top: 8px
@@ -162,7 +158,7 @@ $top-menu: sprite-map("top-menu/*.png")
     .button
       font-size: 12px
       color: #d8d8d8
-      padding: 0 8px 0 22px
+      padding: 0 5px 0 22px
       .icon
         left: 5px
         top: 9px
