--- a/app/assets/stylesheets/pages/top-menu.css.sass
+++ b/app/assets/stylesheets/pages/top-menu.css.sass
@@ -15,7 +15,7 @@ $top-menu: sprite-map("top-menu/*.png")
   .top-menu-rotator
     height: 30px
     background: black
-    +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px)
+    +box-shadow(rgba(0, 0, 0, 0.5) 0 0 7px, #eee 0 1px 0)
   .center
     width: 760px
     margin: 0 auto
