Add flash messages from JS

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,7 @@
         Загрузка…
         .ouroboros
     = yield
+    .flash-messages
     .old-browser-notice
       В более современном браузере сайт гораздо удобнее.
       Установите, например,
