Allow to send comments

--- a/app/assets/stylesheets/core/full-loader.css.sass
+++ b/app/assets/stylesheets/core/full-loader.css.sass
@@ -30,8 +30,10 @@ body.js .full-loader
     bottom: 17px
     left: 17px
     right: 17px
-    background: inline-image("full-loader/ouroboros.svg")
-    +animation(full-loader-ouroboros, 2.5s)
+
+.ouroboros
+  background: inline-image("full-loader/ouroboros.svg")
+  +animation(full-loader-ouroboros, 2.5s)
 
 .full-loader.hide
   opacity: 0
