--- a/app/assets/stylesheets/pages/title.css.sass
+++ b/app/assets/stylesheets/pages/title.css.sass
@@ -49,6 +49,7 @@ $title-height: 1.4 * $title-width
       font-size: 15px
       height: $title-height - 6px - 85px
       overflow: hidden
+      color: #333
       p
         padding: 5px 0
   .rotator
