--- a/app/views/posts/_comments.haml
+++ b/app/views/posts/_comments.haml
@@ -19,23 +19,28 @@
       .arrow
 
 .new-comment
-  = form_tag comments_path do
-    .postcard
-      %input( type="hidden" name="return_to" value="#{@post.url}" )
-      %input( type="hidden" name="post_path" value="#{@post.path}" )
+  .mailbox
+    на модерацию
+  .crop
+    = form_tag comments_path do
+      .postcard
+        %input( type="hidden" name="return_to" value="#{@post.url}" )
+        %input( type="hidden" name="post_path" value="#{@post.path}" )
 
-      .text
-        %label( for="new_comment_text" ) Текст нового комментария
-        %textarea#new_comment_text( name="text" )
-      .row
-        %label( for="new_comment_name" ) Имя:
-        %input#new_comment_name( type="text" name="author_name" value="#{session['author_name'] || 'Аноним'}" )
-      .row
-        %label( for="new_comment_email" ) Эл. почта:
-        %input#new_comment_email( type="email" name="author_email" value="#{session['author_email']}" )
-      .email-note
-        Ваша эл. почта нужна, чтобы отправить вам ответ
-        (в том числе, если его нельзя опубликовать на сайте).
-    .submits
-      %input.hero( type="submit" value="Отправить герою" )
-      %input.author( type="submit" name="for_author" value="Отправить автору" )
+        .text
+          %label( for="new_comment_text" ) Текст нового комментария
+          %textarea#new_comment_text( name="text" )
+        .row
+          %label( for="new_comment_name" ) Имя:
+          %input#new_comment_name( type="text" name="author_name" value="#{session['author_name'] || 'Аноним'}" )
+        .row
+          %label( for="new_comment_email" ) Эл. почта:
+          %input#new_comment_email( type="email" name="author_email" value="#{session['author_email']}" )
+        .email-notice
+          Ваша эл. почта нужна, чтобы отправить вам ответ
+          (в том числе, если его нельзя опубликовать на сайте).
+
+      .submits
+        %input.hero( type="submit" value="Отправить герою" )
+        .loader.ouroboros
+        %input.author( type="submit" name="for_author" value="Отправить автору" )
