Add template for comments moderation page

--- a/app/views/layouts/simple.html.haml
+++ b/app/views/layouts/simple.html.haml
@@ -2,6 +2,8 @@
 %html
   %head
     %meta( charset='UTF-8' )
+    = favicon_link_tag
+    = enable_html5_for_ie
     = yield :head
     - if Rails.env.production?
       = render 'shared/counter'
