--- a/app/assets/stylesheets/comments.css.sass
+++ b/app/assets/stylesheets/comments.css.sass
@@ -2,6 +2,15 @@
 
 @import 'core/common'
 
+.exit
+  position: fixed
+  top: 5px
+  right: 10px
+  input
+    border: none
+    cursor: pointer
+    &:hover
+      text-decoration: underline
 .comments-moderation
   width: 600px
   max-width: 100%
