Add simple spam defence

--- a/app/assets/stylesheets/pages/comments.css.sass
+++ b/app/assets/stylesheets/pages/comments.css.sass
@@ -55,6 +55,8 @@
   display: none
   margin: 28px 60px 5px 60px
   position: relative
+  .shibboleth
+    display: none
   .mailbox
     position: absolute
     top: -22px
