--- a/app/views/posts/_comments.haml
+++ b/app/views/posts/_comments.haml
@@ -39,6 +39,7 @@
         .email-notice
           Ваша эл. почта нужна, чтобы отправить вам ответ
           (в том числе, если его нельзя опубликовать на сайте).
+        %input.shibboleth( type="text" name="shibboleth" value="" )
 
       .submits
         %input.hero( type="submit" value="Отправить герою" )
