--- a/app/views/posts/title.html.haml
+++ b/app/views/posts/title.html.haml
@@ -2,7 +2,7 @@
   - @hide_top_menu = true
   = render 'top-menu'
 
-%article.title-page( data-url="/" )
+%article.title-page.page( data-url="/" )
   .book
     .book-wrap
       .bottom
