--- a/app/assets/stylesheets/comments_moderation.css.sass
+++ b/app/assets/stylesheets/comments_moderation.css.sass
@@ -15,9 +15,11 @@ body
     cursor: pointer
     &:hover
       text-decoration: underline
+
+@import 'pages/comment'
+
 .comments-moderation
   width: 600px
-  max-width: 100%
   margin: 0 auto
   .empty
     padding: 30px 0
@@ -33,7 +35,7 @@ body
     a
       color: black
       text-decoration: none
-      &:hover
+      &:hover span
         text-decoration: underline
     .count
       display: inline-block
@@ -41,48 +43,40 @@ body
       color: #666
       position: relative
       top: -3px
-  .comment
-    margin: 10px (3 * 25px) 10px 0
-    padding: 7px 10px
-    background: white
-    +shadow
-    position: relative
-    &.author
-      border-top: 15px solid black
-      .to-author
-        position: absolute
-        top: -15px
-        left: 10px
-        font-size: 11px
-        color: white
-    .info
-      text-align: right
-      font-size: 14px
-      color: #999
-      .author, .time
-        display: inline
-      .author
-        margin: 0 5px 0 3px
+  article.comment
+    margin-left: 0
+    .info a
+      color: #333
+      text-decoration: none
+      &:hover
+        text-decoration: underline
     .buttons
       position: absolute
       left: 100%
-      bottom: 5px
+      top: 12px
       margin-left: 7px
-      width: 3 * 25px
+      width: 3 * 33px
       form
         display: inline
       input
-        display: inline-block
+        display: block
+        float: left
         border: none
         background: black
         color: white
         text-align: center
-        width: 20px
-        height: 20px
+        width: 30px
+        height: 30px
+        font-size: 20px
         cursor: pointer
         +box-shadow(white 0 0 0, rgba(0, 0, 0, 0.4) 0 0 3px)
         +transition(all, 200ms)
         position: relative
+        margin: 0 3px 3px 0
+        &.delete
+          font-size: 25px
+        &.star
+          font-size: 35px
         &:hover, &:focus
           z-index: 2
           +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.4) 0 0 6px 3px)
