Fix unimportant comments opening

--- a/app/assets/stylesheets/pages/comments.css.sass
+++ b/app/assets/stylesheets/pages/comments.css.sass
@@ -4,6 +4,8 @@
   position: relative
   .unimportant-comments
     display: none
+    margin-top: -5px
+    padding-top: 5px
   .comments-controls
     height: 30px
     position: relative
