Inline error and diagonal images to CSS

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,5 +1,6 @@
 @import 'base'
 
+@import 'core/common-images'
 @import 'core/notices'
 @import 'core/flash'
 
@@ -7,4 +8,3 @@
 @import 'pages/top-menu'
 @import 'pages/post'
 @import 'pages/comments'
-@import 'pages/comment'
