--- a/app/assets/stylesheets/core/notices.css.sass
+++ b/app/assets/stylesheets/core/notices.css.sass
@@ -23,7 +23,7 @@ body.js .disabled-js
   display: none
   height: 30px
   line-height: 30px
-  background: black image-url("common/diagonal.png")
+  background-color: black
   color: white
   text-shadow: black 1px 1px 1px
   a
@@ -74,7 +74,7 @@ body.old-browser .old-browser-notice
 .no3d-notice .description
   position: fixed
   left: 0
-  background: black image-url("common/diagonal.png")
+  background-color: black
   color: white
   text-shadow: black 1px 1px 1px
   bottom: -(22px + 10px + 7px)
