--- a/app/assets/stylesheets/error.css.sass
+++ b/app/assets/stylesheets/error.css.sass
@@ -23,7 +23,7 @@ $half-error: $error-size / 2
     top: 30px
     left: 50%
     +image-size("error/skull-and-crossbones.png")
-    background: image-url("error/skull-and-crossbones.png")
+    background: inline-image("error/skull-and-crossbones.png")
     margin-left: -(image-width("error/skull-and-crossbones.png") / 2)
     text-decoration: none
   .text
