--- a/app/assets/stylesheets/pages/comments.css.sass
+++ b/app/assets/stylesheets/pages/comments.css.sass
@@ -57,137 +57,5 @@
       top: 9px
       left: 8px
 
-.new-comment
-  display: none
-  margin: 28px 110px 5px 60px
-  position: relative
-  .shibboleth
-    display: none
-  .mailbox
-    position: absolute
-    top: -22px
-    left: 0
-    right: 0
-    height: 30px
-    line-height: 15px
-    font-size: 12px
-    color: #777
-    text-align: center
-    text-shadow: white 0 1px 1px
-    +background( linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 18px, black 18px, #888 19px, rgba(255, 255, 255, 0)) )
-    display: none
-  .crop
-    padding: 24px 5px 10px 5px
-    overflow: hidden
-    position: relative
-    top: -3px
-  .postcard
-    background: white
-    padding: 15px
-    +shadow
-    position: relative
-    +transition(background, 200ms)
-    &.focus
-      background: #fafafa
-  .text
-    position: relative
-    margin: -5px -5px 5px -5px
-    label
-      position: absolute
-      top: 7px
-      left: 5px
-      color: #777
-      cursor: text
-  textarea
-    border: none
-    color: black
-    width: 550px
-    height: 60px
-    padding: 5px
-    resize: none
-    +transition(background, 150ms)
-  textarea, .row input
-    background: transparent
-    &:focus
-      background: white
-  .row
-    text-align: right
-    margin-top: 6px
-    input, label
-      font-size: 14px
-      height: 24px
-      line-height: 24px
-    input
-      border: none
-      padding: 0 3px
-      border-bottom: 1px solid #ccc
-      width: 200px
-      text-align: left
-      +transition("background border-bottom-color", 150ms)
-      &:focus
-        border-bottom-color: #999
-    label
-      padding-right: 5px
-  .email-notice
-    width: 240px
-    font-size: 13px
-    color: #777
-    margin-top: 15px
-    position: absolute
-    left: 13px
-    bottom: 22px
-    +transition(color, 200ms)
-    &.highlighted
-      color: black
-  .submits
-    height: 30px
-    position: relative
-    width: 2 * 165px + 3px
-    margin: 15px auto 0 auto
-    +transition(width, 400ms)
-    input
-      display: block
-      height: 30px
-      line-height: 31px
-      +shadow
-      border: none
-      width: 165px
-      background: black
-      color: white
-      cursor: pointer
-      +box-shadow(white 0 0 0, rgba(0, 0, 0, 0.4) 0 0 3px)
-      +transition(all, 200ms)
-      position: relative
-      &:hover, &:focus
-        z-index: 2
-        +box-shadow(white 0 0 0 3px, rgba(0, 0, 0, 0.4) 0 0 6px 3px)
-    input.hero
-      float: left
-      text-align: right
-      padding-right: 12px
-    input.author
-      float: right
-      text-align: left
-      padding-left: 12px
-    .loader
-      position: absolute
-      top: 15px
-      left: 50%
-      width: 0
-      height: 0
-      margin-left: 0
-      +transition(all, 400ms)
-      +border-radius(50%)
-  .sending .submits
-    width: 2 * 165px + 60px
-    .loader
-      top: -7px
-      margin-left: -24px
-      width: 46px
-      height: 46px
-  form.sent
-    position: absolute
-    top: 17px
-    z-index: 3
-    .submits
-      display: none
+@import 'pages/comment'
+@import 'pages/new-comment'
