--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
         .ouroboros
     = yield
     .flash-messages
-    .old-browser-notice
+    .old-browser-notice.diagonal-background
       В более современном браузере сайт гораздо удобнее.
       Установите, например,
       <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
@@ -46,9 +46,9 @@
       .banner
         .text 3D
         .line
-      .description
-        В браузере с поддеркой 3D сайт будет красивее.
-        Например, можете скачайте
+      .description.diagonal-background
+        В браузере с поддержкой 3D сайт будет красивее.
+        Можете, например, скачать
         <a href="http://www.google.com/chrome?hl=ru">Google Chrome</a>.
     .disabled-js
       Если включить JavaScript, то сайт станет гораздо удобнее.
