Decrease size of quick styles

--- a/app/assets/stylesheets/core/full-loader.css.sass
+++ b/app/assets/stylesheets/core/full-loader.css.sass
@@ -9,6 +9,7 @@ body.js .full-loader
   z-index: 1000
   background: $gray-background
   +transition(opacity, 900ms)
+  color: black
   .center
     position: absolute
     top: 50%
