--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
 
     = render 'shared/console'
     = include_jquery
+    = airbrake_javascript_notifier
     = javascript_include_tag :application, type: nil
 
     %link( rel="alternate" type="application/atom+xml" href="/posts.atom" )
