--- a/app/views/posts/feed.atom.haml
+++ b/app/views/posts/feed.atom.haml
@@ -7,7 +7,8 @@
   %link( href="#{root}/" type="text/html" )/
   %updated= @posts.last.updated_at.xmlschema
   %author
-    %name= Digest::SHA1.hexdigest "Андрей Ситник"
+    %name Автор Инсомниса
+    %email insomnis.story@gmail.com
   %id= id_prefix + '/posts.atom'
   - @posts.reverse_each do |post|
     %entry
